--- a/MobileApplication/app/src/main/res/values/strings.xml
+++ b/MobileApplication/app/src/main/res/values/strings.xml
@@ -4,13 +4,18 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_sing_out">Sign out</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
     <string name="prompt_server_ip">Server IP</string>
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
+    <string name="prompt_name">Name</string>
+    <string name="prompt_retype_password">Retype Password</string>
+    <string name="prompt_role">Role</string>
+    <string name="action_edit">Edit</string>
+    <string name="action_add">Add</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_register">Register</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -20,4 +25,23 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <string name="profile">Your Profile</string>
+    <string name="users">Users</string>
+    <string name="rooms">Rooms</string>
+    <string name="switch_types">Switch Types</string>
+    <string name="configuration">Configuration</string>
+    <string name="add_module">Add Module</string>
+    <string name="add_switch_type">Add Switch Type</string>
+    <string name="modules">Modules</string>
+    <string name="module_configurations">Module Configurations</string>
+    <string name="test">Test</string>
+    <string name="nodemcu">NodeMCU</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="add_user">Add User</string>
+    <string name="add_room">Add Room</string>
+    <string name="user_details">User Details</string>
+    <string name="room_details">Room Details</string>
+    <string name="delete_user">Delete User</string>
+
 </resources>
